<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_blue"
    tools:context=".NewROVActivity">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:backgroundTint="@color/dark_grey_blue"
        android:hint="@string/rov_name_prompt"
        android:inputType="textPersonName"
        android:textColor="@color/dark_grey_blue"
        android:textColorHint="@color/dark_grey_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ipET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:autofillHints=""
        android:backgroundTint="@color/dark_grey_blue"
        android:digits="0123456789."
        android:hint="@string/ip_address_prompt"
        android:inputType="number|numberDecimal"
        android:textColor="@color/dark_grey_blue"
        android:textColorHint="@color/dark_grey_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/iconTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/icon_prompt"
        android:textColor="@color/dark_grey_blue"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipET" />

    <ImageButton
        android:id="@+id/rovIB"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/image_btn_bg"
        android:contentDescription="@string/icon_prompt"
        android:padding="10dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconTV"
        app:srcCompat="@drawable/icons8_colourful_sub_100" />


    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryXDark"
        android:tag="historyBtn"
        android:text="@string/new_rov_prompt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>