<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryMed">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ExpROVerIV"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/exprover_text_min"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--app:srcCompat="@drawable/exprover_text_min"-->

        <View
            android:id="@+id/separator1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="12dp"
            android:background="@color/med_grey"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ExpROVerIV" />

        <TextView
            android:id="@+id/signInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryMed"
            android:fontFamily="@font/caviar_dreams"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/separator1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/separator1" />

        <Button
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorPrimaryXDark"
            android:drawableStart="@drawable/icons8_google_32"
            android:paddingStart="10sp"
            android:paddingEnd="50sp"
            android:tag="googleBtn"
            android:text="@string/sign_up_google"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInTV" />

        <View
            android:id="@+id/separator2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/med_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

        <TextView
            android:id="@+id/signInEmailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryMed"
            android:fontFamily="@font/caviar_dreams"
            android:padding="12dp"
            android:text="@string/or_sign_up_email"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/separator2"
            app:layout_constraintEnd_toStartOf="@+id/separator2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/separator2"
            app:layout_constraintTop_toTopOf="@+id/separator2" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:autofillHints=""
            android:backgroundTint="@color/light_grey"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInEmailTV"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:autofillHints=""
            android:backgroundTint="@color/light_grey"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            tools:targetApi="o" />

        <Button
            android:id="@+id/emailBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryXDark"
            android:tag="signinBtn"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordET"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:tag="signupBtn"
            android:text="@string/sign_in_prompt"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailBtn"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>