<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_blue"
    tools:context=".ViewROVActivity">

    <TextView
        android:id="@+id/rov_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/caviar_dreams_bold"
        android:text="@string/rov_name_prompt"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/title_separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/dark_grey_blue"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rov_name" />

    <TextView
        android:id="@+id/rov_status_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:text="@string/status_prompt"
        android:textColor="@color/dark_grey_blue"
        android:textSize="@dimen/small_text_size"
        android:fontFamily="@font/caviar_dreams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_separator" />

    <TextView
        android:id="@+id/rov_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:text="@string/connected"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/small_text_size"
        android:fontFamily="@font/caviar_dreams_bold"
        app:layout_constraintStart_toEndOf="@+id/rov_status_prompt"
        app:layout_constraintTop_toBottomOf="@+id/title_separator" />

    <RelativeLayout
        android:id="@+id/new_expedition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/text_btn_bg"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/rov_status_prompt">

        <TextView
            android:id="@+id/new_expedition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/caviar_dreams"
            android:text="@string/new_expedition"
            android:textColor="@color/dark_grey_blue"
            android:textSize="@dimen/normal_text_size" />

        <ImageView
            android:id="@+id/new_expedition_right_arrow"
            android:layout_width="44dp"
            android:layout_height="57dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="3dp"
            app:srcCompat="@drawable/icons8_right_arrow_dbg_50" />
    </RelativeLayout>

    <View
        android:id="@+id/new_expedition_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/new_expedition"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/dark_grey_blue"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_expedition" />

    <RelativeLayout
        android:id="@+id/view_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:background="@drawable/text_btn_bg"
        app:layout_constraintTop_toBottomOf="@+id/new_expedition_separator">

        <TextView
            android:id="@+id/view_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/caviar_dreams"
            android:text="@string/view_history"
            android:textColor="@color/dark_grey_blue"
            android:textSize="@dimen/normal_text_size" />

        <ImageView
            android:id="@+id/view_history_right_arrow"
            android:layout_width="44dp"
            android:layout_height="57dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="3dp"
            app:srcCompat="@drawable/icons8_right_arrow_dbg_50" />
    </RelativeLayout>


    <View
        android:id="@+id/view_history_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/view_history"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/dark_grey_blue"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_history" />


    <RelativeLayout
        android:id="@+id/configure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/tiny_vertical_margin"
        android:background="@drawable/text_btn_bg"
        app:layout_constraintTop_toBottomOf="@+id/view_history_separator">

        <TextView
            android:id="@+id/configure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/caviar_dreams"
            android:text="@string/configure"
            android:textColor="@color/dark_grey_blue"
            android:textSize="@dimen/normal_text_size" />

        <!--<View-->
            <!--android:id="@+id/configure_separator"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_below="@+id/configure_text"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_marginTop="14dp"-->
            <!--android:background="@color/dark_grey_blue"-->
            <!--android:visibility="visible"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent" />-->

        <ImageView
            android:id="@+id/configure_right_arrow"
            android:layout_width="44dp"
            android:layout_height="57dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="3dp"
            app:srcCompat="@drawable/icons8_right_arrow_dbg_50" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>